syntax = "proto3";

package project;

import "common.proto";

service ProjectService {
  rpc FindProjectList(ProjectByCreatorIdRequest) returns (ProjectListResponse) {
  }
  rpc FindProject(FindProjectRequest) returns (Project) {}
  rpc CreateProject(CreateProjectRequest) returns (Project) {}
  rpc UpdateProject(UpdateProjectRequest) returns (Project) {}
  rpc DeleteProject(DeleteProjectRequest) returns (common.VoidResponse) {}
}

message DeleteProjectRequest { string id = 1; }

message FindProjectRequest { string id = 1; }

message UpdateProjectRequest {
  string id = 1;
  optional string name = 2;
  optional string environment = 3;
  optional string description = 4;
}

message CreateProjectRequest {
  string name = 1;
  string environment = 2;
  optional string description = 3;
  string creator_id = 4;
}

message ProjectByCreatorIdRequest {
  string creator_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ProjectListResponse {
  int32 total = 3;
  repeated Project data = 5;
}

message Project {
  string id = 1;
  string name = 2;
  string environment = 3;
  string description = 4;
}
